# live-bootcamp-project-auth

./: auth-compose.yml
auth-service/: .gitignore  Cargo.toml  Dockerfile  build.rs  test_build.rs
auth-service/proto/: auth.proto
auth-service/src/: app_state.rs  lib.rs  main.rs
auth-service/src/domain/: access_claims.rs  as_redis_hash_args.rs  email.rs  email_client.rs  issued_tokens.rs  login_attempt_id.rs  login_request.rs  login_response.rs  logout_response.rs  mod.rs  password.rs  signup_request.rs  signup_response.rs  twofa_code.rs  user.rs  verify_mfa_request.rs  verify_token_request.rs
auth-service/src/domain/data_stores/: banned_token_store.rs  banned_token_store_err.rs  base_repository.rs  jwt_key_store.rs  mod.rs  refresh_err.rs  refresh_record.rs  refresh_store.rs  twofa_code_store.rs  twofa_err.rs  (+2 more)
auth-service/src/errors/: login.rs  logout.rs  mod.rs  signup.rs  verify_mfa.rs  verify_token.rs
auth-service/src/migrations/: add_requires_mfa_to_users.rs  create_table_users.rs  mod.rs
auth-service/src/routes/: delete_account.rs  mod.rs  signup.rs
auth-service/src/services/: auth.rs  hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mod.rs  token_service.rs
auth-service/src/utils/: auth.rs  config.rs  consts.rs  cookie_helpers.rs  mod.rs
auth-service/src/validation/: email.rs  mod.rs  password.rs
auth-service/tests/: redis_refresh_store_tests.rs  redis_service_tests.rs  token_service_tests.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  root.rs  signup.rs  verify_2fa.rs  verify_token.rs
(+17 files in other folders)
