[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
axum-extra = { version = "0.9.2", features = ["cookie"] }
serde_json = "1.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
env_logger = "0.11.8"
serde = { version = "1.0.204", features = ["derive"] }
regex = "1.11.1"
once_cell = "1.19.0"
thiserror = "2.0.12"
async-trait = "0.1.78"
tonic = { version = "0.12", features = ["transport", "router"] }
prost = "0.13"
tower = "0.5"
futures = "0.3.31"
tonic-reflection = "0.12"
jsonwebtoken = "9.2.0"
chrono = "0.4.35"
dotenvy = "0.15.7"
lazy_static = "1.4.0"
rand = "0.9.2"
base64 = "0.22.1"
blake3 = "1.8.2"
time = "0.3"
welds = { version = "0.4.17", features = ["migrations", "postgres", "sqlite"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls"] }
argon2 = { version = "0.5.3", features = ["std"] }

[dev-dependencies]
simple_logger = "5.0.0"
reqwest = { version = "0.11.26", default-features = false, features = [
    "json",
    "cookies",
] }

[build-dependencies]
# generates the Rust code from your .proto files at build time
tonic-build = "0.12"
